Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12009

Android: Check for invalid package name prepends '_', which isn't allowed either

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.1.0-rc1
    • Android Support
    • None
    • Qt Creator 3.1.0 RC1 (3.0.84)
      Qt 5.2.1 for Android with Qt Creator 3.0.1

    Description

      STR

      1. Install Qt Creator 3.1.0 RC
      2. Configure Qt Versions and Kits because autodetection didn't work
      3. Create Qt Quick (the same for Qt Widgets) typical "Hello World" application
      4. Build and Run to AVD (arm, x86 doesn't matter)

      AR

      1. As soon as deploy starts .apk file is build.
      2. Deploy in Qt Creator finished successfully, but no application started in AVD. There is following error in Application Console:
        Unable to start "org.qtproject.example._3QtAT".
        

      If .apk file copied manually to AVD or real device - Android rises error before install .apk.

      ER

      .apk which build using Qt Creator should start and work successfully on AVD or on real device.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            neooleg Oleg
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes