Android: Warn against a package name starting with _

Task-number: QTCREATORBUG-12009
Change-Id: Ia8bded2e4c84b3fedca2f0a64a487cd1760e07d5
Reviewed-by: BogDan Vatra <bogdan@kde.org>